# scryfall-telegram

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg  tox.ini
scripts/: register_webhook.py
scryfall_telegram/: callback.py  handler.py  inline.py  keyboard.py  logging.py  query.py  textmessage.py
scryfall_telegram/scryfall/: client.py  models.py  service.py
scryfall_telegram/telegram/: client.py  models.py
src/: convert.rs  main.rs
src/scryfall/: api.rs  models.rs
src/telegram/: api.rs  inbound.rs  inline.rs  messages.rs  mod.rs  outbound.rs
tests/: conftest.py
tests/integration/: test_scryfall.py  test_telegram.py  test_textmessage.py
tests/unit/: test_callback.py  test_inline.py  test_query.py  test_scryfall.py  test_textmessage.py
