[package]
name = "scryfall-telegram-rs-serverless"
version = "0.1.0"
authors = ["Oliver Hofkens <oliver@novemberfive.co>"]
edition = "2018"

[dependencies]
log = "^0.4.6"
lambda_runtime = "^0.2.1"
lambda_http = "^0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "^0.9.18"
