[tool.poetry]
name = "scryfall-telegram"
version = "2.2.1"
description = ""
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
packages = [
    { include = "scryfall_telegram" }
]

[tool.poetry.dependencies]
python = "^3.8"

pyxDamerauLevenshtein = "1.7"
orjson = "^3.8"
requests = "^2.28"

black = { version = "^22.10", optional = true }
bump2version = { version = "^1.0.1", optional = true }
flake8 = { version = "^3.8", optional = true }
isort = { version = "^5.10", optional = true }
mypy = { version = "^0.982", optional = true }
pytest = { version = "^7.2", optional = true }
pytest-cov = { version = "*", optional = true }
types-requests = { version = "*", optional = true }
vulture = { version = "^2.6", optional = true }
yamllint = { version = "^1.28.0", optional = true }

[tool.poetry.extras]
dev = ["bump2version"]
linting = ["flake8", "black", "isort", "mypy", "types-requests", "vulture", "yamllint"]
testing = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
