[tool.poetry]
name = "scryfall-telegram"
version = "2.5.0"
description = ""
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
packages = [
    { include = "scryfall_telegram" }
]

[tool.poetry.dependencies]
python = "^3.10"

pyxDamerauLevenshtein = "^1.7"
orjson = "^3.9"
requests = "^2.31"
structlog = "^23.1"

black = { version = "^24.2", optional = true }
bump2version = { version = "^1.0.1", optional = true }
flake8 = { version = "^7.0", optional = true }
isort = { version = "^5.13", optional = true }
mypy = { version = "^1.8", optional = true }
pytest = { version = "^8.0", optional = true }
pytest-cov = { version = "*", optional = true }
types-requests = { version = "*", optional = true }
vulture = { version = "^2.11", optional = true }
yamllint = { version = "^1.35", optional = true }

[tool.poetry.extras]
dev = ["bump2version"]
linting = ["flake8", "black", "isort", "mypy", "types-requests", "vulture", "yamllint"]
testing = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
